# workbuoy-suite

./: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.cleanup.cjs  .eslintrc.enforce  .gitignore  .gitlab-ci.yml  .npmrc  .prettierignore  .spectral  .spectral.yaml  .swcrc  AO_placeholder_note.js  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  DEV_AGENT_PROMPT_PR1.md  Dockerfile  MERGE_GUIDE.md  MERGE_MANIFEST.json  META_ROUTE_README.md  META_ROUTE_RUNBOOK.md  PACKAGE_SCRIPTS.md  PR_BODY.md  PR_BODY_PR1.md  PR_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README-APPLY.txt  README-PR1.md  README.md  README_BUOY_2.4.4.md  README_CLEANUP_PATCH.md  README_CLEANUP_UPLOAD.md  README_MINI_FINAL.md  README_MVP_ADDONS.md  README_MVP_REMAINING_20.md  README_PR-BUOY-CHAT-SEARCH.md  README_PR-C-DEBUG.md  README_PR12-RESILIENCE.md  (+66 more)
.ci/: AUTOMERGE_SMOKE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
PATCHES/: CRM_POLICY.md  DB_SETUP.md  HARDEN_server_errorMapper.diff  PACKAGE_COVERAGE.md  SERVER_APPEND.md  USE_CACHED_GUARD.md  WIRE_BUOY_ROUTE.md  WIRE_DB_FLAG.md  WIRE_OBSERVABILITY.md  WIRE_WHY_SOURCES.md
PR_BODY/: feature-persistence-roles-usage-caps.md
alertmanager/: config.yaml
api-docs/: openapi.yaml  openapi_base.yaml  (+2 more)
sdk/python/: CHANGELOG.md  README.md  pyproject.toml  setup.py  workbuoy.py
sdk/python/src/workbuoy_sdk/: __init__.py  cli.py  client.py
sdk/python/tests/: test_adaptive.py  test_smoke.py
sdk/python/workbuoy/: __init__.py  cli.py  client.py  utils.py
sdk/python/workbuoy_adaptive/: __init__.py  client.py
(+2740 files in other folders)
