[project]
name = "workbuoy-adaptive"
version = "1.0.0"
description = "Adaptive HTTP client for WorkBuoy (token bucket + EWMA backoff)"
readme = "README.md"
authors = [{name="WorkBuoy"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0", "prometheus-client>=0.20.0"]

[project.urls]
Homepage = "https://github.com/workbuoy/workbuoy-suite"
Repository = "https://github.com/workbuoy/workbuoy-suite"

[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"
